[package]
name = "Briefcase"
version = "0.1.0"
edition = "2021"

[dependencies]
file-hashing = "0.1.2"
md-5 = "0.10.6"
rusqlite = "0.33.0"
sha1 = "0.10.6"

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
